--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "electron-boilerplate-vue",
-  "productName": "Electron Boilerplate Vue",
+  "name": "git-work-hub-flow",
+  "productName": "Git Work Hub Flow",
   "version": "0.1.0",
   "description": "An Electron + Vue.js project.",
-  "author": "Brad Stewart <me@bradstewart.co>",
+  "author": "Patrick Sullivan <patrick@pdsullivan.com>",
   "main": "background.js",
   "dependencies": {
     "jquery": "2.2.2"
