--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "electron-packager": "^7.0.0",
     "electron-prebuilt": "1.1.0",
     "electron-rebuild": "^1.1.3",
-    "eslint": "^2.0.0",
+    "eslint": "^3.12.2",
+    "eslint-config-shipt": "^0.2.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.3.0",
