--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
     "webpack-externals-plugin": "1.0.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3"
+  },
+  "dependencies": {
+    "github-api": "^3.0.0"
   }
 }
