--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
+node_modules
+out
 .DS_Store
-Thumbs.db
-node_modules/
-app/dist/
-dist/
-releases/
-npm-debug.log*
-selenium-debug.log
-test/unit/coverage
-test/e2e/reports
